[tool.poetry]
name = "debug-api"
version = "0.1.0"
description = ""
authors = ["Andrei Moiseenko <moiseenko.cy@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
